<resources>
    <string name="app_name">BPHO musicians</string>
    <string name="mailHint">Email address</string>
    <string name="passwordHint">Password</string>
    <string name="connexion">Log in</string>
    <string name="forgotPassword">Forgot your password ?</string>
    <string name="validateUser">Validating User...</string>
    <string name="wrongConnect">Wrong Email or password</string>
    <string name="connected">Successfully connected</string>
    <string name="send">Send</string>
    <string name="resetPasswordSent">An E-mail was sent to reset your password</string>
    <string name="incorrectMail">This E-mail is incorrect</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="loading">Loading...</string>
    <string name="noMoreEvent">No more event</string>
    <string name="eventsPerso">My events</string>
    <string name="navigation">Navigation</string>
    <string name="eventsGeneral">All events</string>
    <string name="noUserEvents">You don\'t have any event</string>
    <string name="event">Event</string>
    <string name="reservation">Online booking</string>
    <string name="alerts">Alerts</string>
    <string name="noAlert">No alert available for this event</string>
    <string name="profil">Profile</string>
    <string name="name">Name</string>
    <string name="firstName">First name</string>
    <string name="newPassword">New password (8 char.)</string>
    <string name="passwordConfirm">Password confirm</string>
    <string name="phone">Phone</string>
    <string name="currentPassword">Current password</string>
    <string name="apply">Apply</string>
    <string name="passwordDontMatch">New password fields don\'t match</string>
    <string name="passwordTooShort">New password is too short (min. 8 characters)</string>
    <string name="emptyCurrentPassword">The current password is required</string>
    <string name="profilUpdated">Updated profile</string>
    <string name="wrongCurrentPassword">Current password incorrect</string>
    <string name="emailTaken">This E-mail is already taken</string>
    <string name="noMoreUser">No more users</string>
    <string name="noUser">No user available</string>
    <string name="wrongFile">Wrong file type (jpg, png and gif accepted)</string>
    <string name="message">Your message</string>
    <string name="noMessage">No message available</string>
    <string name="emptyMessage">Your message is empty</string>
    <string name="messageSend">Message sent</string>
    <string name="noInternet">No Internet connection</string>
    <string name="internetRequest">Please turn on WiFi or mobile data</string>
    <string name="agenda">Agenda</string>
    <string name="listUsers">Gebruikers Lijst</string>
    <string name="welcome">Welcome !</string>
    <string name="messagerie">Messaging</string>
    <string name="image">Picture (jpg, png, gif) :</string>
    <string name="chooseImage">Choose a picture</string>
    <string name="grade">Right :</string>
    <string name="instruments">Instrument(s) :</string>
    <string name="logout">Log out</string>
</resources>
