<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.bpho.bpho_music.ModifProfil"
    android:id="@+id/drawer_layout">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutModifProfil1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/scrollView">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/layoutModifProfil">

                    <EditText
                        android:hint="@string/firstName"
                        android:gravity="center"
                        android:id="@+id/firstName"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textSize="14sp"/>

                    <EditText
                        android:hint="@string/name"
                        android:gravity="center"
                        android:id="@+id/name"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_below="@id/firstName"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/email"
                        android:gravity="center"
                        android:inputType="textEmailAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_below="@id/name"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/mailHint"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/password"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_below="@id/email"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/newPassword"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="14sp"/>

                    <EditText
                        android:hint="@string/passwordConfirm"
                        android:layout_below="@id/password"
                        android:id="@+id/passwordConfirm"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="14sp"/>

                    <EditText
                        android:hint="@string/phone"
                        android:layout_below="@id/passwordConfirm"
                        android:id="@+id/phone"
                        android:inputType="phone"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textSize="14sp"/>

                    <EditText
                        android:hint="@string/currentPassword"
                        android:layout_below="@id/phone"
                        android:id="@+id/currentPassword"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_margin="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_centerHorizontal="true"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/currentPassword"
                        android:text="*"
                        android:layout_alignBaseline="@id/currentPassword"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/layoutModifProfil"
                    android:layout_marginTop="20dp"
                    android:text="@string/apply"/>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <ListView
        android:id="@+id/amisList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>
