<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login">


    <RelativeLayout
        android:id="@+id/layoutPrincipalConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/layoutConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/ETmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hint="@string/mailHint"
                android:inputType="textEmailAddress"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:singleLine="true"
                android:text=""
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/ETpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ETmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:singleLine="true"
                android:textAlignment="center"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutConnexion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnConnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/connexion" />

            <TextView
                android:id="@+id/mdpForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnConnexion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:linksClickable="true"
                android:text="@string/forgotPassword"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
